--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,11 @@
         android:layout_marginRight="32dp"
         android:layout_marginEnd="32dp" />
 
+    <!--android:src="@mipmap/ic_launcher"-->
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/color1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView"
         android:layout_below="@+id/button2"
         android:layout_alignLeft="@+id/button2"
