--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,18 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#673AB7</item>
+        <item name="colorPrimaryDark">#ff4b3495</item>
+        <item name="colorAccent">#ffff4a4f</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="AppSecTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowIsTranslucent">true</item>
+
+        <item name="colorPrimary">#673AB7</item>
+        <item name="colorPrimaryDark">#ff4b3495</item>
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
 </resources>
