--- a/jframework/src/main/res/anim/up_and_fade_in.xml
+++ b/jframework/src/main/res/anim/up_and_fade_in.xml
@@ -2,8 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="200"
-        android:fromYDelta="200"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:fromYDelta="100%p"
         android:toYDelta="0" />
     <alpha
         android:duration="200"
