--- a/jframework/src/main/res/layout/progress_dialog_layout.xml
+++ b/jframework/src/main/res/layout/progress_dialog_layout.xml
@@ -6,22 +6,22 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:paddingStart="8dip"
-        android:paddingTop="10dip"
-        android:paddingEnd="8dip"
-        android:paddingBottom="10dip">
+        android:background="@color/white"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:baselineAligned="false">
 
-        <com.studio.jframework.widget.progressbar.MaterialIndeterminateProgressBar
-            android:id="@android:id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"/>
+        <com.studio.jframework.widget.progressbar.MaterialProgressBar
+            android:id="@+id/progress"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="16dp"/>
 
         <TextView android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"/>
     </LinearLayout>
 </FrameLayout>
