--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#ff000000</color>
     <color name="white">#ffffffff</color>
+    <color name="orange">#ffff4125</color>
 </resources>
