--- a/jframework/src/main/res/drawable/point_unchecked.xml
+++ b/jframework/src/main/res/drawable/point_unchecked.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <corners android:radius="20px" />
-    <solid android:color="#f27543"/>
-
-
+    <corners android:radius="20dp"/>
+    <solid android:color="#cccccc" />
 </shape>
