--- a/jframework/src/main/res/layout/base_guideline_layout.xml
+++ b/jframework/src/main/res/layout/base_guideline_layout.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.studio.jframework.view.AutoScrollViewPager
+    <com.studio.jframework.widget.AutoScrollViewPager
         android:id="@+id/guide_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -13,8 +12,7 @@
         android:layout_above="@+id/guide_point"
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="马上体验"/>
+        android:layout_height="wrap_content"/>
     <LinearLayout
         android:id="@+id/guide_point"
         android:layout_width="match_parent"
