--- a/jframework/src/main/res/drawable/point_checked.xml
+++ b/jframework/src/main/res/drawable/point_checked.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <corners android:radius="20dp" />
-    <solid android:color="#f27543"/>
+    <corners android:radius="3dp" />
+    <size android:height="5dp" android:width="15dp" />
+    <solid android:color="@color/white" />
 </shape>
