--- a/jframework/src/main/res/drawable/point_unchecked.xml
+++ b/jframework/src/main/res/drawable/point_unchecked.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <corners android:radius="20dp"/>
-    <solid android:color="#cccccc" />
+    <corners android:radius="2dp" />
+    <size android:height="5dp" android:width="15dp" />
+    <stroke android:width="1px" android:color="@color/white" />
 </shape>
