--- a/jframework/src/main/res/layout/base_guideline_layout.xml
+++ b/jframework/src/main/res/layout/base_guideline_layout.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.studio.jframework.widget.AutoScrollViewPager
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:clipToPadding="false">
+
+    <com.studio.jframework.widget.pager.AutoScrollViewPager
         android:id="@+id/guide_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
     <Button
         android:id="@+id/guide_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/guide_point"
-        android:layout_marginBottom="10dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/guide_point"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp" />
+
     <LinearLayout
         android:id="@+id/guide_point"
         android:layout_width="match_parent"
+        android:layout_height="10dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="60dp"
-        android:gravity="center"
-        android:layout_height="10dp"
         android:background="#00ffffff"
-        android:orientation="horizontal"/>
+        android:gravity="center"
+        android:orientation="horizontal" />
 </RelativeLayout>
