--- a/jframework/src/main/res/values/color.xml
+++ b/jframework/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white" >#ffffffff</color>
+    <color name="white">#ffffffff</color>
+    <color name="orange">#ffff6e45</color>
 </resources>
