--- a/jframework/src/main/res/layout/widget_toast_layout.xml
+++ b/jframework/src/main/res/layout/widget_toast_layout.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#a5000000"
     android:gravity="center"
-    android:id="@+id/toast_container"
-    android:orientation="horizontal">
+    android:id="@+id/toast_container">
 
     <ImageView
         android:id="@+id/icon"
