--- a/staticapp/src/main/res/layout/test_item2.xml
+++ b/staticapp/src/main/res/layout/test_item2.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:background="@color/primary"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
