--- a/staticapp/src/main/res/values-v21/styles.xml
+++ b/staticapp/src/main/res/values-v21/styles.xml
@@ -1,8 +1,10 @@
 <resources>
 
     <style name="AppTheme" parent="Base.AppTheme">
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:colorAccent">@color/accent</item>
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorControlHighlight">@color/high_light</item>
     </style>
 
 </resources>
