--- a/staticapp/src/main/res/layout/activity_drawer_main.xml
+++ b/staticapp/src/main/res/layout/activity_drawer_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_width="match_parent">
 
     <include layout="@layout/view_include_main" />
 
@@ -13,7 +12,6 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         app:menu="@menu/drawer_view"
         app:headerLayout="@layout/view_nav_header" />
 
