--- a/staticapp/src/main/res/layout/test_item.xml
+++ b/staticapp/src/main/res/layout/test_item.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:background="@color/accent"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
