--- a/jframework/src/main/res/layout/common_listview_layout.xml
+++ b/jframework/src/main/res/layout/common_listview_layout.xml
@@ -11,7 +11,9 @@
         <com.studio.jframework.widget.listview.LoadMoreListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:dividerHeight="1px"
+            android:scrollbars="none" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
