--- a/staticapp/src/main/res/values/styles.xml
+++ b/staticapp/src/main/res/values/styles.xml
@@ -2,6 +2,9 @@
 
     <style name="AppTheme" parent="Base.AppTheme" >
     </style>
+    <style name="AppTheme2" parent="Base.AppTheme" >
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 
     <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/accent</item>
