--- a/staticapp/src/main/res/values-v21/styles.xml
+++ b/staticapp/src/main/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
         <item name="android:colorControlHighlight">@color/high_light</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
 </resources>
